先备份-工行SDK开发

--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
+        <!--rabbitMQ消息队列包-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
         <!--此处是swagger2接口文档包-->
         <dependency>
             <groupId>io.springfox</groupId>
