--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=9417
+#server.port=9417
 
 # datasource
 # \u9A71\u52A8
@@ -100,3 +100,22 @@ spring.redis.port=6379
 #----------------------------
 
 
+#RabbitMQ\u914D\u7F6E----------------------------http://172.16.1.79:15672/
+#spring.rabbitmq.host=47.106.8.116
+spring.rabbitmq.host=172.16.1.79
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.port=5672
+#----------------------------
+
+#HTTPS\u914D\u7F6E----------------------------
+#https\u52A0\u5BC6\u7AEF\u53E3\u53F7 443
+server.port=8010
+#SSL\u8BC1\u4E66\u8DEF\u5F84 \u4E00\u5B9A\u8981\u52A0\u4E0Aclasspath:
+server.ssl.key-store=classpath:520oo.jks
+#SSL\u8BC1\u4E66\u5BC6\u7801
+server.ssl.key-store-password=fVSKOAru
+#\u8BC1\u4E66\u7C7B\u578B
+server.ssl.key-store-type=JKS
+#\u8BC1\u4E66\u522B\u540D
+#server.ssl.key-alias=alias
